Customer interest classification.ipynb

--- a/Customer interest classification.ipynb
+++ b/Customer interest classification.ipynb
@@ -5,7 +5,7 @@
    "id": "bc8cbeab",
    "metadata": {},
    "source": [
-    "# ICM520 Part A – Final Fixed Notebook (SHAP, SMOTE, GridSearchCV)"
+    "# Customer interest classification (SHAP, SMOTE, GridSearchCV)"
    ]
   },
   {
